채집 스킬 오류 수정